--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,9 +11,35 @@
         <button class="btnCall">Свяжитесь со мной</button>
         <button class="btnInit">Вход</button>
         <button class="burgerBtn">
-            <svg>
-                <use href="#burgerIco"></use>
-            </svg>
+            <div class="burger-button-close">
+                <div id="first-line-burger"></div>
+                <div id="second-line-burger"></div>
+                <div id="third-line-burger"></div>
+            </div>
         </button>
+    </div>
+    <div class="page-wrapper">
+        <div class="overlay" id="menu-overlayZ"></div>
+        <div class="menu-main">
+            <div class="menu-wrapper" id="menu-wrapperZ">
+                <div class="close-block" id="#close-blockZ">
+                    <span>Закрыть меню</span>
+                    <div></div>
+                </div>
+                <div class="nav-block">
+                    <ul>
+                        <li><a href="#">Преимущества </a></li>
+                        <li><a href="#">Возможности Сделки</a></li>
+                        <li><a href="#">Интеграции</a></li>
+                        <li><a href="#">Что ещё есть в Сделке</a></li>
+                        <li><a href="#">Внедрение СRM</a></li>
+                        <li><a href="#">Тарифы</a></li>
+                        <li><a href="#">О нас</a></li>
+                        <li><a href="#">В разработке</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </header>
