--- a/src/partials/sprite.html
+++ b/src/partials/sprite.html
@@ -18,13 +18,13 @@
         </g>
     </symbol>
 
-    <symbol id="burgerIco" viewBox="0 0 24 12">
+    <!-- <symbol id="burgerIco" viewBox="0 0 24 12">
         <g>
-            <rect width="24" height="2" fill="white"/>
-            <rect y="10" width="24" height="2" fill="white"/>
-            <rect y="5" width="24" height="2" fill="white"/>
+            <rect id="first-line-burger" width="24" height="2" fill="white"/>
+            <rect id="third-line-burger" y="10" width="24" height="2" fill="white"/>
+            <rect id="second-line-burger" y="5" width="24" height="2" fill="white"/>
         </g>
-    </symbol>
+    </symbol> -->
 
     <symbol id="arrowDown" viewBox="0 0 24 12">
         <g>
