--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -19,17 +19,17 @@ html {
     font-size: calc(100vw / 960 * 10);
   }
 
-  @include breakpoint($jb-bp) {
-    font-size: calc(100vw / 850 * 10);
-  }
+  // @include breakpoint($jb-bp) {
+  //   font-size: calc(100vw / 850 * 10);
+  // }
 
-  @include breakpoint($lb-bp) {
-    font-size: calc(100vw / 650 * 10);
-  }
+  // @include breakpoint($lb-bp) {
+  //   font-size: calc(100vw / 640 * 10);
+  // }
 
 
   @include breakpoint($sm-bp) {
-    font-size: calc(100vw / 375 * 10);
+    font-size: calc(100vw / 480 * 10);
   }
 
   
