--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -1603,17 +1603,23 @@
 
 
         .baseContainer {
-            padding: 0 3.2rem;
+            @include breakpoint($xl-bp) {
+                padding: 0 3.2rem;
+            }
             .baseImgContainer {
                 display: flex;
                 justify-content: center;
                 margin-bottom: 5rem;
-                    padding-left: 25rem;
-                    padding-right: 25rem;
+                    padding-left: 38rem;
+                    padding-right: 38rem;
                 img {
                     width: 100%;
                     height: 100%;
                     object-fit: contain;
+                }
+                @include breakpoint($mm-bp) {
+                    padding-left: 25rem;
+                    padding-right: 25rem;
                 }
                 @include breakpoint($xl-bp) {
                     padding-left: 0;
