--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -57,6 +57,24 @@ svg {
   transition: all 0.1s linear;
 }
 
+.activeBlock {
+  // display: block !important;
+  opacity: 1 !important;
+  // animation: slim2 linear 0.4s;   
+
+}
+
+
+@keyframes slim2 {
+  0% {
+      height: 100%;
+  }
+
+  100% {
+      height: 0%;
+  }
+}
+
 /* Vendors */
 
 
