--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -232,6 +232,10 @@
                 font-size: 8.4rem;
                 line-height: 10rem;
             }
+            @include breakpoint($sm-bp) {
+                font-size: 4rem;
+                line-height: 5rem;
+            }
             span {
                 color: #9FF612;
             }
@@ -249,9 +253,19 @@
             @include breakpoint($xl-bp) {
                 margin-top: 5rem;
             }
+            @include breakpoint($sm-bp) {
+                display: grid;
+                grid-template-columns: repeat(2, min-content);
+                row-gap: 4rem;
+                justify-items: flex-start;
+            }
             .hiddenText {
                 @include breakpoint($xl-bp) {
                     line-height: 3rem;
+                }
+                @include breakpoint($sm-bp) {
+                    grid-column: 2 span;
+                    grid-row: 1 / 2;
                 }
 
             }
@@ -270,6 +284,9 @@
                 text-align: center;
                 color: #FFFFFF;
                 padding: 1rem 2rem;
+                @include breakpoint($sm-bp) {
+                    width: 100%;
+                }
             }
 
             .demo {
@@ -295,7 +312,9 @@
                 color: #FFFFFF;
                 width: 31.9rem;
                 margin-left: 8.4rem;
-
+                @include breakpoint($sm-bp) {
+                    margin-left: 0;
+                }
                 span {
                     font-weight: 700;
                 }
@@ -1610,8 +1629,8 @@
                 display: flex;
                 justify-content: center;
                 margin-bottom: 5rem;
-                    padding-left: 38rem;
-                    padding-right: 38rem;
+                    padding-left: 40rem;
+                    padding-right: 40rem;
                 img {
                     width: 100%;
                     height: 100%;
@@ -5717,98 +5736,40 @@
             font-size: 1.8rem;
             line-height: 2.2rem;
             color: #FFFFFF;
-            width: 72.2rem;
+            padding-left: 24rem;
+            width: 92rem;
+            @include breakpoint($mm-bp) {
+                padding-left: 0;
+                width: 72.2rem;
+            }
         }
 
         .categoriesContainer {
-            display: flex;
-            margin-top: 2.3rem;
-            gap: 9.1rem;
-            align-items: center;
-
-
-            .categories {
-                display: flex;
-                flex-direction: column;
-                gap: 2rem;
-
-                .cat {
-                    border-radius: 1.2rem;
-                    border: 0.1rem solid #9FF612;
-                    font-family: 'Nunito Sans';
-                    font-style: normal;
-                    font-weight: 700;
-                    font-size: 2.4rem;
-                    line-height: 3.3rem;
-                    color: #FFFFFF;
-                    padding: 1.4rem 1.5rem 1.4rem 3rem;
-                    display: flex;
-                    justify-content: space-between;
-                    width: 52rem;
-
-                    .arrowContainer {
-                        background: #124BF6;
-                        border-top: 0.1rem solid #9FF612;
-                        border-left: 0.1rem solid #9FF612;
-                        border-right: 0.3rem solid #9FF612;
-                        border-bottom: 0.3rem solid #9FF612;
-                        border-radius: 0.6rem;
-                        padding: 0.8rem;
-                        display: flex;
-                        padding-right: 1.2rem;
-                        transition: all 0.3s linear;
-
-                        .arrowOpen {
-                            width: 1.5rem;
-                            height: 1.5rem;
-                            border-top: 0.2rem solid #FFFFFF;
-                            border-right: 0.2rem solid #FFFFFF;
-                            transform: rotate(45deg);
-                            cursor: pointer;
-                        }
-
-                        
-
-                    }
-
-                    .act {
-                        background: #F86247;
-                        border-top: 0.1rem solid #9FF612;
-                        border-left: 0.1rem solid #9FF612;
-                        border-right: 0.3rem solid #9FF612;
-                        border-bottom: 0.3rem solid #9FF612;
-                        border-radius: 0.6rem;
-                        padding: 0.8rem;
-                        display: flex;
-                        padding-left: 1.2rem;
-                        padding-right: 0.6rem;
-                        cursor: pointer;
-                        transition: all 0.3s linear;
-
-                        .arrowOpen {
-                            width: 1.5rem;
-                            height: 1.5rem;
-                            border-top: 0.2rem solid #FFFFFF;
-                            border-right: 0.2rem solid #FFFFFF;
-                            transform: rotate(-135deg);
-                        }
-                    }
-
-                    
-                }
-
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            padding-left: 24rem;
+            padding-right: 22.5rem;
+            column-gap: 9rem;
+            position: relative;
+            @include breakpoint($mm-bp) {
+                padding-left: 0;
+                padding-right: 0;
             }
             .windowBlock {
-                position: absolute;
+                // position: absolute;
+                max-height: 0;
                 right: 3%;
                 overflow: hidden;
-                padding: 4rem;
                 background: #F9F9F9;
                 border-radius: 1.2rem;
                 // display: none;
-                opacity: 0;
-                // animation: slim linear 0.4s;   
-
+                opacity: 1;
+                display: none;
+                transition: max-height 0.4s ease-out, opacity 0.5s ease-out;
+                // animation: slim linear 0.4s; 
+                .windowblock-container {
+                    padding: 4rem;
+                }
                 .windowTitle {
                     font-family: 'Nunito Sans';
                     font-style: normal;
@@ -5857,7 +5818,79 @@
                     margin-top: 3.6rem;
                 }
             }
+            .categories {
+                display: flex;
+                flex-direction: column;
+                gap: 2rem;
+                padding-top: 8rem;
+                .cat {
+                    border-radius: 1.2rem;
+                    border: 0.1rem solid #9FF612;
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 2.4rem;
+                    line-height: 3.3rem;
+                    color: #FFFFFF;
+                    padding: 1.4rem 1.5rem 1.4rem 3rem;
+                    display: flex;
+                    justify-content: space-between;
+                    width: 100%;
 
+                    .arrowContainer {
+                        background: #124BF6;
+                        border-top: 0.1rem solid #9FF612;
+                        border-left: 0.1rem solid #9FF612;
+                        border-right: 0.3rem solid #9FF612;
+                        border-bottom: 0.3rem solid #9FF612;
+                        border-radius: 0.6rem;
+                        padding: 0.8rem;
+                        display: flex;
+                        padding-right: 1.2rem;
+                        transition: all 0.3s linear;
+
+                        .arrowOpen {
+                            width: 1.5rem;
+                            height: 1.5rem;
+                            border-top: 0.2rem solid #FFFFFF;
+                            border-right: 0.2rem solid #FFFFFF;
+                            transform: rotate(45deg);
+                            cursor: pointer;
+                        }
+
+                        
+
+                    }
+
+                    .act {
+                        background: #F86247;
+                        border-top: 0.1rem solid #9FF612;
+                        border-left: 0.1rem solid #9FF612;
+                        border-right: 0.3rem solid #9FF612;
+                        border-bottom: 0.3rem solid #9FF612;
+                        border-radius: 0.6rem;
+                        padding: 0.8rem;
+                        display: flex;
+                        padding-left: 1.2rem;
+                        padding-right: 0.6rem;
+                        cursor: pointer;
+                        transition: all 0.3s linear;
+
+                        .arrowOpen {
+                            width: 1.5rem;
+                            height: 1.5rem;
+                            border-top: 0.2rem solid #FFFFFF;
+                            border-right: 0.2rem solid #FFFFFF;
+                            transform: rotate(-135deg);
+                        }
+                    }
+        
+                }
+
+            }
+            .right-block {
+                padding-top: 2.3rem;
+            }
             @keyframes slim {
                 0% {
                     height: 100%;
