--- a/src/assets/scss/blocks/footer.scss
+++ b/src/assets/scss/blocks/footer.scss
@@ -13,6 +13,12 @@ footer {
         justify-content: flex-start;
     }
 
+    @include breakpoint($lb-bp) {
+        padding-top: 10rem;
+        padding-bottom: 10rem;
+        flex-wrap: wrap;
+    }
+
     .container {
         display: flex;
         flex-direction: column;
@@ -42,6 +48,11 @@ footer {
                 margin-top: 0;
             }
         }
+
+        .mob {
+            display: none;
+        }
+
         .bigText + .bigText {
             padding-top: 2rem;
         }
