--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -47,13 +47,13 @@
             Реквизиты
         </a>
 
-        <a href="#" class="bigText">
+        <a href="#" class="bigText mob">
             Блог
         </a>
     </div>
 
     <div class="container rightContainer">
-        <a href="#" class="bigText">
+        <a href="#" class="bigText mob">
             8 800 111 33 22
         </a>
 
