--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -28,8 +28,8 @@ html {
   // }
 
 
-  @include breakpoint($sm-bp) {
-    font-size: calc(100vw / 480 * 10);
+  @include breakpoint($lb-bp) {
+    font-size: calc(100vw / 640 * 10);
   }
 
   
